# booking-back

./: celerybeat-schedule.db  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 22eea0d4fddc_add_image_to_hotel.py  725ef6548f6a_added_role_to_user.py  7febbd88285c_added_role_to_user_2.py  98c00138ae61_add_username_and_age_to_user.py  b981723b498a_remove_image_id.py  dbbe3d4d8119_init.py  e83521be6b79_added_room_and_booking.py
app/api/: api.py  deps.py
app/api/endpoints/: booking_controller.py  hotel_controller.py  login_controller.py  room_controller.py  user_controller.py
app/common/dto/: auth_dto.py  base.py  booking_dto.py  hotel_dto.py  room_dto.py  user_dto.py
app/common/models/: __init__.py  booking.py  hotel.py  room.py  user.py
app/common/repository/: booking_repository.py  crud_base_repository.py  hotel_repository.py  room_repository.py  user_repository.py
app/common/service/: base_service.py  hotel_service.py
app/core/: config.py  exceptions.py  security.py
app/db/: metadata.py  session.py
app/tasks/: celery_app.py  email_template.py  scheduled.py  tasks.py
app/utils/: s3_client.py
