[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
pydantic-settings = "^2.4.0"
fastapi-restful = "^0.6.0"
typing-inspect = "^0.9.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-app = "poetry.core.masonry.api"
