[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
pydantic-settings = "^2.4.0"
fastapi-restful = "^0.6.0"
typing-inspect = "^0.9.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.2.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
celery = "^5.4.0"
flower = "^2.0.1"
pillow = "^10.4.0"
python-multipart = "^0.0.10"
aiobotocore = "^2.15.1"


[build-system]
requires = ["poetry-core"]
build-app = "poetry.core.masonry.api"
